--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     const videoIframe = document.querySelector('.video-container iframe');
     
     // Replace with your actual YouTube video ID
-    const videoId = "dQw4w9WgXcQ"; // Sample ID - replace with your actual video ID
+    const videoId = "gxM3khnLe0k"; // My intro video ID
     
     // Show video when the button is clicked - removed auto-popup
     videoTrigger.addEventListener('click', () => {
