--- a/visualization.html
+++ b/visualization.html
@@ -237,7 +237,7 @@
       chatInput.value = '';
 
       try {
-        const response = await fetch('https://climatechangepulseserver.onrender.com/chat', {
+        const response = await fetch('http://127.0.0.1:5000/chat', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
